[tool.poetry]
name = "cashclockjr"
version = "0.1.0"
description = "cashclockjr sourcecode"
authors = ["Phil"]
license = "Private"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-pubsub = "^2.13.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
